--- a/LoginService/pom.xml
+++ b/LoginService/pom.xml
@@ -10,6 +10,16 @@
 
   <artifactId>LoginService</artifactId>
   <packaging>jar</packaging>
-
   <name>LoginService</name>
+
+  <build>
+    <plugins>
+    <!-- SPRING BOOT PLUGIN -->
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
