--- a/LoginService/pom.xml
+++ b/LoginService/pom.xml
@@ -12,6 +12,14 @@
   <packaging>jar</packaging>
   <name>LoginService</name>
 
+  <dependencies>
+    <dependency>
+      <groupId>com.test.taxiservice</groupId>
+      <artifactId>TaxiServiceCommon</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
     <!-- SPRING BOOT PLUGIN -->
