Added APIGateway + Added API for updating profile

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>TaxiServiceCommon</module>
         <module>LoginService</module>
         <module>DocumentService</module>
+        <module>TaxiServiceAPIGateway</module>
     </modules>
 
     <properties>
