--- a/LoginService/pom.xml
+++ b/LoginService/pom.xml
@@ -18,6 +18,14 @@
       <artifactId>TaxiServiceCommon</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.9.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
