Added APIGateway + Added API for updating profile

--- a/LoginService/src/main/resources/application.properties
+++ b/LoginService/src/main/resources/application.properties
@@ -3,3 +3,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/TaxiService
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+redis.host = localhost
+redis.port = 6379
+redis.pass =
+
+server.port=8081
+
+app.jwt.secret=abcd1234
