--- a/TaxiServiceCommon/src/main/resources/application.properties
+++ b/TaxiServiceCommon/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://db-mysql:3306/TaxiService?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
-spring.datasource.url=jdbc:mysql://localhost:3306/TaxiService
+spring.datasource.url=jdbc:mysql://db-mysql:3307/TaxiService?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/TaxiService
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 
-redis.host = 127.0.0.1
+redis.host = localhost
 redis.port = 6379
 redis.pass =
 
