--- a/DocumentService/src/main/resources/application.properties
+++ b/DocumentService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=3456
+server.port=8083
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=true
 spring.messages.basename=messages
@@ -9,8 +9,9 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-loginservice.host=http://localhost:987
-loginservice.login.url=http://localhost:8081
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+document.storage.type=LOCAL
+document.max-file-size=5000
