--- a/LoginService/src/main/resources/application.properties
+++ b/LoginService/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/TaxiService
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
 
 redis.host = localhost
 redis.port = 6379
