--- a/TaxiServiceCommon/pom.xml
+++ b/TaxiServiceCommon/pom.xml
@@ -11,5 +11,15 @@
   <artifactId>TaxiServiceCommon</artifactId>
   <packaging>jar</packaging>
   <name>TaxiServiceCommon</name>
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
+
+
+  </dependencies>
 
 </project>
