--- a/TaxiServiceCommon/pom.xml
+++ b/TaxiServiceCommon/pom.xml
@@ -11,6 +11,7 @@
   <artifactId>TaxiServiceCommon</artifactId>
   <packaging>jar</packaging>
   <name>TaxiServiceCommon</name>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
     <dependency>
@@ -21,5 +22,20 @@
 
 
   </dependencies>
+
+
+  <build>
+    <plugins>
+      <!-- SPRING BOOT PLUGIN -->
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>com.test.taxiservice.taxiservicecommon.TaxiServiceCommonApplication</mainClass>
+          <layout>JAR</layout>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
