--- a/DocumentService/src/main/resources/application.properties
+++ b/DocumentService/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
+spring.main.allow-bean-definition-overriding=true
+
+
 spring.redis.host=localhost
 spring.redis.port=6379
 
