--- a/DriverTrackingService/src/main/resources/application.properties
+++ b/DriverTrackingService/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
+spring.main.allow-bean-definition-overriding=true
+
 
 redis.host = localhost
 redis.port = 6379
