--- a/LoginService/src/main/resources/application.properties
+++ b/LoginService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mysql://localhost:3306/TaxiService
-spring.datasource.url=jdbc:mysql://db-mysql:3307/TaxiService?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/TaxiService
+#spring.datasource.url=jdbc:mysql://db-mysql:3307/TaxiService?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,9 +9,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.main.allow-bean-definition-overriding=true
 
 
-spring.redis.host=redishost
+spring.redis.host=localhost
 spring.redis.port=6379
 
-server.port=8082
+server.port=8081
 
 app.jwt.secret=abcd1234
